--- a/Paralelo/BBDD/templates/Cursos.html
+++ b/Paralelo/BBDD/templates/Cursos.html
@@ -1,41 +1,50 @@
 {% extends 'index.html'%}
 
 {% block content %}
-<body class="cursos">
-    <h1>Cursos disponibles</h1>
-    <br>
+
+<h1>Cursos disponibles</h1>
+<br>
+    
+    {% for x in tematicas %}
     <hr>
-      
-        {% for x in tematicas %}
-        <div class="Nombre"><h3>{{x}}</h3></div>
+    <div class="Nombre">
+        <div>
+            <h2>{{x}}</h2>
+            <button class="desplegar btn btn-dark" id="boton{{x}}">Desplegar videos</button>
+        </div>
         
+    </div>
+    
+    <div class="desplegable" id="div{{x}}">
         <div class="tema">  
-                {% for video in tablaVideos %}
-                    {% if video.tematica.tema == x %}
-                    <div class="video">
-                        <p class="titulo">{{video.nombre_video}} </p>
-                        <iframe id="frameVideo" src="{{video.url}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <p class="autor">{{video.autor}}</p>
-                        <label for="menu">Añadir a la lista</label>
-                        <div class="extraAction">
-                            <form method="POST" class="no_recargar">
-                                {% csrf_token %}
-                                <select name="listas" id="menu">
-                                    {% for curso in cursosCoincidentes%}
-                                    <option value="{{curso.id}},{{video.id}}">{{curso.nombre_curso}}</option>
-                                    {%endfor%}
-                                </select>
-                                <button class="btn btn-dark btn-sm" type="submit" onclick="alert('Se ha añadido a la lista')">Añadir</button>
-                            </form>
-                            </div>
-                    </div>
-                
-                    {%endif%}
-                {% endfor %}
+            {% for video in tablaVideos %}
+                {% if video.tematica.tema == x %}
+                <div class="video">
+                    <p class="titulo">{{video.nombre_video}} </p>
+                    <iframe id="frameVideo" src="{{video.url}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <p class="autor">{{video.autor}}</p>
+                    <label for="menu">Añadir a la lista</label>
+                    <div class="extraAction">
+                        <form method="POST" class="no_recargar">
+                            {% csrf_token %}
+                            <select name="listas" id="menu">
+                                {% for curso in cursosCoincidentes%}
+                                <option value="{{curso.id}},{{video.id}}">{{curso.nombre_curso}}</option>
+                                {%endfor%}
+                            </select>
+                            <button class="btn btn-dark btn-sm" type="submit" onclick="alert('Se ha añadido a la lista')">Añadir</button>
+                        </form>
+                        </div>
+                </div>
+            
+                {%endif%}
+            {% endfor %}
 
         </div>
-        {% endfor %}
+    </div>
+    
+    {% endfor %}
 
-</body>
+
 
 {% endblock content %}
