--- a/Paralelo/BBDD/templates/editar_lista.html
+++ b/Paralelo/BBDD/templates/editar_lista.html
@@ -2,111 +2,170 @@
 
 {% block content %}
 <body>
-    <h1>Edita tu lista "{{nombre}}"</h1> 
+    <br>
+    <div class="listaTitulo">
+        <h1 class="text-center">Edita tu lista "{{nombre}}"</h1> 
+        <p><a class="nlista" href="{% url 'listas'%}">Volver a mis listas</a></p>
+    </div>
+    <br>
     <div>
         <h2>Cambiar nombre de la lista:</h2>
         <div>
             <form method="POST" action="{% url 'editar_lista' curso nombre%}">
+                <input type="hidden" name="identificador" value="form1">
                 {% csrf_token %}
                 <input type="text" name="cambiar_nombre" required>
                 <button class="btn btn-outline-dark" type="submit" >renombrar</button>
             </form>
         </div> 
     </div>
+    <br>
     <div>
         {%for x in tablaCursos%}
             {%if x.id == curso %}
-            <div class="Nombre">  
-                <div>
-                    <h2>{{x.nombre_curso}}</h2>
-                </div>
-                <div class="Form1Listas">
-                    <form method="POST" action="{% url 'editar_lista' curso nombre%}">
-                        {% csrf_token %}
-                        <input type="hidden" name="eliminar_id_lista" value="{{x.id}}">
-                        <input type="submit" value='Eliminar "{{x.nombre_curso}}"' class="btn btn-dark" onclick="return confirm('¿Estás seguro de eliminar la lista? Esta acción no se puede deshacer')">
-                    </form>
-                </div>
-            </div> 
-
-            <div class="tema"> 
-                {%for j in tablaLista_reproduccion%}
-                    {%if j.id_curso == x.id%}
-                        {%for k in tablaVideos%}
-                            {%if k.id == j.id_video%}
-                                <div class="video">
-                                    <p class="titulo">{{k.nombre_video}} </p>
-                                    <iframe id="frameVideo" src="{{k.url}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                                    <p class="autor">{{k.autor}}</p>
-                                    <div>
-                                        <form method="POST" action="{% url 'editar_lista' curso nombre%}">
-                                            {% csrf_token %}
-                                            <input type="hidden" name="eliminar_id" value="{{j.id}}">
-                                            <button class="btn btn-dark submit" type="submit" >Eliminar de la lista</button>
-                                        </form>
-                                    </div> 
-                                </div>
+                <div class="Nombre">  
+                    <div>
+                        <h2>Videos de {{x.nombre_curso}}</h2>
+                    </div>
+                    <div class="Form1Listas">
+                        <form method="POST" action="{% url 'editar_lista' curso nombre%}">
+                            <input type="hidden" name="identificador" value="form2">
+                            {% csrf_token %}
+                            <input type="hidden" name="eliminar_id_lista" value="{{x.id}}">
+                            <input type="submit" value='Eliminar "{{x.nombre_curso}}"' class="btn btn-dark" onclick="return confirm('¿Estás seguro de eliminar la lista? Esta acción no se puede deshacer')">
+                        </form>
+                    </div>
+                </div> 
+                <div class="Recomendaciones">
+                    {%for recomendacion in tablaRecomendacion%}
+                        {%if recomendacion.lista_central == x.id%}
+                            {%if recomendacion.lista_previa != -1%}
+                                    {%for lista in tablaCursos%}
+                                        {%if lista.id == recomendacion.lista_previa%}
+                                            <p class="p1">Lista previa recomendada: {{lista.nombre_curso}}</p>
+                                        {%endif%}
+                                    {%endfor%}
                             {%endif%}
-                        {%endfor%}
-                    {%endif%}
-                {%endfor%}
-            </div>
+                            {%if recomendacion.lista_siguiente != -1%}
+                                    {%for lista in tablaCursos%}
+                                        {%if lista.id == recomendacion.lista_siguiente%}
+                                            <p class="p2">Lista siguiente recomendada: {{lista.nombre_curso}}</p>
+                                        {%endif%}
+                                    {%endfor%}
+                            {%endif%}
+                        {%endif%}
+                    {%endfor%}
+                </div>
+                <div class="tema"> 
+                    {%for j in tablaLista_reproduccion%}
+                        {%if j.id_curso == x.id%}
+                            {%for k in tablaVideos%}
+                                {%if k.id == j.id_video%}
+                                    <div class="video">
+                                        <p class="titulo">{{k.nombre_video}} </p>
+                                        <iframe id="frameVideo" src="{{k.url}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                        <p class="autor">{{k.autor}}</p>
+                                        <div>
+                                            <form method="POST" action="{% url 'editar_lista' curso nombre%}">
+                                                <input type="hidden" name="identificador" value="form3">
+                                                {% csrf_token %}
+                                                <input type="hidden" name="eliminar_id" value="{{j.id}}">
+                                                <button class="btn btn-dark submit" type="submit" >Eliminar de la lista</button>
+                                            </form>
+                                        </div> 
+                                    </div>
+                                {%endif%}
+                            {%endfor%}
+                        {%endif%}
+                    {%endfor%}
+                </div>
             {%endif%}
         {%endfor%}
         
     </div>
 
-
-
-
-
-    <div>
-        <h2>Intercambiar el orden de dos videos</h2>
-        <br><br>
-            <div>
-                <form method="post">
-                    {% csrf_token %}
-                    <div id="CambioIzquierda">
-                        <p>Seleccione el primer video</p>
-                        <select name="pos1">   
-                            {% for x in tablaCursos %}
-                                {% if x.id == curso %}
-                                    {% for j in tablaLista_reproduccion %}
-                                        {% if j.id_curso == x.id %}
-                                            {% for k in tablaVideos %}
-                                                {% if k.id == j.id_video %}
-                                                    <option value="{{ j.posicion }}"> {{ k.nombre_video}} </option>
-                                                {% endif %}
-                                            {% endfor %}
+    
+    <div class="formulario">
+        <h1 class="text-center">Intercambiar el orden de dos videos</h1>
+        <form method="post" class="formUsers">
+            <input type="hidden" name="identificador" value="form4">
+            {% csrf_token %}
+            <div id="CambioIzquierda">
+                <p>Seleccione el primer video</p>
+                <select name="pos1" required>  
+                    <option class="vacio" value="" disabled selected>--- Seleccione una opción ---</option> 
+                    {% for x in tablaCursos %}
+                        {% if x.id == curso %}
+                            {% for j in tablaLista_reproduccion %}
+                                {% if j.id_curso == x.id %}
+                                    {% for k in tablaVideos %}
+                                        {% if k.id == j.id_video %}
+                                            <option value="{{ j.posicion }}"> {{ k.nombre_video}} </option>
                                         {% endif %}
                                     {% endfor %}
                                 {% endif %}
                             {% endfor %}
-                        </select>     
-                    </div>
-
-                    <div id="CambioDerecha">
-                        <p>Seleccione un video</p>
-                        <select name = "pos2">   
-                            {%for x in tablaCursos%}
-                                {%if x.id == curso %}
-                                    {%for j in tablaLista_reproduccion%}
-                                        {%if j.id_curso == x.id%}
-                                        {%for k in tablaVideos%}
-                                            {%if k.id == j.id_video%}
-                                            <option value="{{j.posicion}}">{{k.nombre_video}}</option>
-                                            {%endif%}
-                                        {%endfor%}
-                                        {%endif%}
-                                    {%endfor%}
+                        {% endif %}
+                    {% endfor %}
+                </select>     
+            </div>
+            <div id="CambioDerecha">
+                <p>Seleccione un video</p>
+                <select name = "pos2" required>
+                    <option class="vacio" value="" disabled selected>--- Seleccione una opción ---</option>   
+                    {%for x in tablaCursos%}
+                        {%if x.id == curso %}
+                            {%for j in tablaLista_reproduccion%}
+                                {%if j.id_curso == x.id%}
+                                {%for k in tablaVideos%}
+                                    {%if k.id == j.id_video%}
+                                    <option value="{{j.posicion}}">{{k.nombre_video}}</option>
+                                    {%endif%}
+                                {%endfor%}
                                 {%endif%}
                             {%endfor%}
-                        </select> 
-                    </div>
-                    <button class="btn btn-outline-dark" type="submit"  name="cambio_orden">Efectuar el cambio</button>
-                </form>
+                        {%endif%}
+                    {%endfor%}
+                </select> 
             </div>
+            <br>
+            <button class="btn btn-outline-dark submit" type="submit"  name="cambio_orden">Efectuar el cambio</button>
+        </form>
     </div>
+
+        {%if Flag == False%}
+        <div class="formulario">
+            <h1 class="text-center">Agregar o modificar recomedaciones</h1>
+            <form method="POST" class="formUsers">
+                <input type="hidden" name="identificador" value="form5">
+                {% csrf_token %}    
+                <p>Seleccione la lista previa</p>
+                <select name="listaPrevia" required>
+                    <option value="-1" class="vacio">--- Nada ---</option>
+                    {%for listaPublica in tablaCursos%}
+                        {%if listaPublica.privacidad == False%}
+                            <option value="{{listaPublica.id}}">{{listaPublica.nombre_curso}}</option>
+                        {%endif%} 
+                    {%endfor%}
+                </select>
+    
+                <p>Seleccione la lista siguiente</p>
+                <select name="listaSiguiente" required>
+                    <option value="-1" class="vacio">--- Nada ---</option>
+                        {%for listaPublica in tablaCursos%}
+                            {%if listaPublica.privacidad == False%}
+                                <option value="{{listaPublica.id}}">{{listaPublica.nombre_curso}}</option>
+                            {%endif%} 
+                        {%endfor%}
+                </select>
+                <br><br>
+                <button class="btn btn-outline-dark submit" type="submit">Añadir</button>
+            </form>
+        </div>
+        {%endif%}
+
+        
+
 </body>
 
 {% endblock content %}
