--- a/Paralelo/BBDD/templates/recomendacion.html
+++ b/Paralelo/BBDD/templates/recomendacion.html
@@ -1,46 +1,45 @@
 {% extends 'index.html'%}
-
+<!--ESto ya no se usa, pero lo dejo aca por si acaso-->
 {% block content %}
 <body>
-    <h1>Pagina crear recomendación</h1>
+    <div class="formulario">
+        <h1 class="text-center">Pagina crear recomendación</h1>
+        <form method="POST" action="{% url 'crear_recomendacion' %}">
+            {% csrf_token %}
 
-    <form method="POST" action="{% url 'crear_recomendacion' %}">
-        {% csrf_token %}
-
-        <p>Seleccione la lista a la que añadir la recomendacion</p>
-        <select name="listaCentral" id="menu">
-            {%for listaPublica in tablaCursos%}
-                {%if listaPublica.privacidad == False%}
-                    <option value="{{listaPublica.id}}">{{listaPublica.nombre_curso}}</option>
-                {%endif%} 
-            {%endfor%}
-        </select>
-
-        <p>Seleccione la lista previa</p>
-        <select name="listaPrevia" id="menu">
-            <option value="-1">Nada</option>
-            {%for listaPublica in tablaCursos%}
-                {%if listaPublica.privacidad == False%}
-                    <option value="{{listaPublica.id}}">{{listaPublica.nombre_curso}}</option>
-                {%endif%} 
-            {%endfor%}
-        </select>
-
-        <p>Seleccione la lista siguiente</p>
-        <select name="listaSiguiente" id="menu">
-            <option value="-1">Nada</option>
+            <p>Seleccione la lista a la que añadir la recomendacion</p>
+            <select name="listaCentral">
                 {%for listaPublica in tablaCursos%}
                     {%if listaPublica.privacidad == False%}
                         <option value="{{listaPublica.id}}">{{listaPublica.nombre_curso}}</option>
                     {%endif%} 
                 {%endfor%}
-        </select>
+            </select>
 
+            <p>Seleccione la lista previa</p>
+            <select name="listaPrevia">
+                <option value="-1">Nada</option>
+                {%for listaPublica in tablaCursos%}
+                    {%if listaPublica.privacidad == False%}
+                        <option value="{{listaPublica.id}}">{{listaPublica.nombre_curso}}</option>
+                    {%endif%} 
+                {%endfor%}
+            </select>
 
-        <br><br>
-        <button class="btn btn-outline-dark" type="submit">Añadir</button>
+            <p>Seleccione la lista siguiente</p>
+            <select name="listaSiguiente">
+                <option value="-1">Nada</option>
+                    {%for listaPublica in tablaCursos%}
+                        {%if listaPublica.privacidad == False%}
+                            <option value="{{listaPublica.id}}">{{listaPublica.nombre_curso}}</option>
+                        {%endif%} 
+                    {%endfor%}
+            </select>
+            <br><br>
+            <button class="btn btn-outline-dark" type="submit">Añadir</button>
+        </div>
+        </form>
     </div>
-    </form>
 </body>
 
 {% endblock content %}
