--- a/Paralelo/BBDD/templates/registro.html
+++ b/Paralelo/BBDD/templates/registro.html
@@ -8,7 +8,7 @@
         <form class="formUsers" method="post">
             {% csrf_token %}
             {{form.as_p}}
-            <button class="btn btn-outline-dark" type="submit" id="submit">Enviar</button>
+            <button class="btn btn-outline-dark submit" type="submit" id="submit">Enviar</button>
         </form>
     </div>
 </body>
