--- a/Paralelo/Paralelo/static/css/main.css
+++ b/Paralelo/Paralelo/static/css/main.css
@@ -7,10 +7,7 @@
 }
 html body {
     background-color: #e8e8e8;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+
 }
 body p{
     font-size: larger;
@@ -19,7 +16,8 @@ body p{
 
 #infoPag{
     padding-top: 64px;
-    min-height: 95vh;
+    min-height: 96.5vh;
+
 }
 
 /* navbar */
@@ -71,8 +69,8 @@ nav ul li a:hover{
     color: #e8e8e8;
 }
 header img {
-    margin-top: 0.5rem;
-    height: 3rem;
+    margin-top: 0.3rem;
+    height: 3.5rem;
 }
 
 /* footer */
@@ -228,6 +226,10 @@ h2{
     color: black;
     font-size: larger;
   }
+  .formUsers input:hover{
+    background-color: #777b7e31;
+  }
+  
 .formUsers textarea {
     width: 100%;
     border: 0;
@@ -252,12 +254,13 @@ h2{
     border-radius: 4px;
     opacity: .8;
     border: 1px solid;
+    border-color: #1f2b44;
     transition: .1s linear;
     font-size: large;
   }
   
 .formUsers button.submit:hover {
-    background-color: black;
+    background-color:#1f2b44;
     color: white;
   }
 
@@ -294,3 +297,57 @@ h2{
  
 }
 
+/* HomePage */
+
+#Unlogged h1{
+    font-size: 10rem;
+    font-weight: 300;
+    font-style: italic;
+    color: #1f2b44;
+    text-align: center;
+    margin: 0;
+    margin-top: 15vh;
+
+    
+}
+
+#Unlogged h3{
+    font-size: 3rem;
+    color:#798ea7;
+    text-align: center;
+    margin: 0;
+}
+#Unlogged h4{
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color:#798ea7;
+    text-align: center;
+    margin-top: 50px;
+}
+#Unlogged h4 a {
+    color:#798ea7 ;
+    font-style: italic;
+}
+#Unlogged h4 a:hover{
+    color: #1f2b44;
+}
+
+/* botones */
+
+body .btn-dark {
+    background-color:#1f2b44;
+}
+body .btn-dark:hover{
+    background-color:#798ea7;
+    border-color: #1f2b44;
+    color: #1f2b44;
+    
+}
+body .btn-outline-dark{
+    border-color: #1f2b44;
+    color: #1f2b44;
+}
+body .btn-outline-dark:hover{
+    background-color: #1f2b44;
+    
+}
