Modificaciones al estilo mainPage logged y url nlista sin padding

--- a/Paralelo/BBDD/templates/Index.html
+++ b/Paralelo/BBDD/templates/Index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="menu">
-      <a  href="{% url 'principal'%}"><img src="{% static 'img/Logo NavBar sin fondo.png' %}" alt=""></a>
+      <a  href="{% url 'principal'%}"><img src="{% static 'img/Azul 2 sin fondo.png' %}" alt=""></a>
       
       <nav>
           <ul>
